# caikit-tgis-serving

./: CONTRIBUTING.md  Dockerfile  Dockerfile.konflux  OWNERS  pyproject.toml
.github/workflows/: build-and-test.yml
.tekton/: README.md  caikit-tgis-serving-28-pull-request.yaml  caikit-tgis-serving-28-push.yaml  caikit-tgis-serving-main-pull-request.yaml  caikit-tgis-serving-main-push.yaml  caikit-tgis-serving-poc-pull-request.yaml  caikit-tgis-serving-poc-push.yaml  caikit-tgis-serving-v2-22-push.yaml  caikit-tgis-serving-v2-23-push.yaml  caikit-tgis-serving-v2-24-push.yaml
demo/kserve/custom-manifests/caikit/: caikit-servingruntime.yaml
docs/: README.md
