[tool.poetry]
name = "caikit-tgis-serving"
version = "0.0.1"
description = ""
authors = ["Daniele Trifirò <dtrifiro@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
caikit = "0.29.0"
caikit-nlp = "0.5.14"
caikit-tgis-backend = "0.1.39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"